--- a/templates/database.html
+++ b/templates/database.html
@@ -36,12 +36,14 @@
 
   <div class="menucontainer">
     <p> <a href="{{ url_for('index') }}" >←</a></p>
-    <p  id="info"><a href="{{ url_for('info') }}">info</p>
+    <p  id="info"><a href="{{ url_for('info') }}">info</a></p>
   </div>
+
+  <div class="datatext">
+  <h2 style="color:black"> Here you can see how this algorithm is grouping all the text uploaded by users</h2>
 </div>
-
-
 <div class="data-container">
+  
   {% for name, info in data.items() %}
     <div class="json-database cluster-{{ info['cluster'] }}">
       <a href="{{ url_for('content', name = name) }}">
