--- a/templates/info.html
+++ b/templates/info.html
@@ -30,7 +30,7 @@
 </script>
 </head>
 
-<body style="background-color:white;">
+<bod>
 
 
   <div class="menucontainer">
@@ -40,7 +40,7 @@
     <div class="data-container">
       <div  class="infotext">
 
-    <h2 style="color:black;  text-align: left;">Text Embedding and Sexism </h2>
+    <h2>Text Embedding and Sexism </h2>
     <p>
       The disproportionate often irresponsive use of Machine learning Algorithms risks to emphasise stereotypes already present in data. Whenever data reflects biases of the broader society, the learning algorithm captures and learns from these stereotypes.
 
