--- a/templates/database.html
+++ b/templates/database.html
@@ -36,7 +36,7 @@
 
   <div class="menucontainer">
     <p> <a href="{{ url_for('index') }}" >←</a></p>
-    <p  id="info"><a href="{{ url_for('info') }}">Why is this important?</a></p>
+    <p  id="info"><a href="{{ url_for('info') }}">why is this important?</a></p>
   </div>
 
   <div class="datatext">
