--- a/templates/index.html
+++ b/templates/index.html
@@ -38,10 +38,10 @@
     <p class="secondpart">
       <a href="{{ url_for('index') }}">←</a>
     </p>
-    <p id="intro">OPENSOURCE APPROACH TO ARTIFICIAL INTELLIGENCE</p>
+    <p id="intro">opensource approach on artificial intelligence</p>
 
 
-    <p  id="info"><a href="{{ url_for('info') }}">Why is this important?</a></p>
+    <p  id="info"><a href="{{ url_for('info') }}">why is this important?</a></p>
 
     <p id="menu-data">
       <a href="{{ url_for('database') }}"> database</a>
