--- a/static/index.css
+++ b/static/index.css
@@ -759,7 +759,9 @@ color: white;
   height:600px;
   float: left;
 border: 1px solid white;
-  line-height: 24px;
+
+  font-size: 0.8em;
+    line-height: 1.2em;
 }
 
 
@@ -767,6 +769,7 @@ border: 1px solid white;
 
   background-color:white;
   text-decoration: none;
+
 }
 .cluster-None >a {
   color:black;
